--- a/css/test.css
+++ b/css/test.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=DotGothic16&family=VT323&display=swap');
+
 .slider-container {
     position: relative;
     margin: 0 auto;
@@ -6,8 +8,8 @@
 }
 
 .slider-container .bullet-container {
-    position: absolute;
-    bottom: 10px;
+    position: relative;
+    bottom: -30%;
     width: 100%;
     display: flex;
     align-items: center;
@@ -20,7 +22,7 @@
     width: 10px;
     border-radius: 50%;
     background-color: #f5f5f5;
-    opacity: 0.4;
+    opacity: 0.3;
 }
 
 .slider-container .bullet-container .bullet:last-child {
@@ -33,9 +35,9 @@
 
 .slider-container .slider-content {
     position: relative;
-    left: 50%;
+    left: 45.6%;
     top: 50%;
-    width: 70%;
+    width: 100%;
     height: 60%;
     transform: translate(-50%, -50%);
 }
@@ -65,11 +67,13 @@
 }
 
 .slider-container .slider-content .slider-single .slider-single-title {
+    position: relative;
+    left: 71%;
+    text-align: center;
     display: block;
-    float: right;
     margin-top: 10px;
-    margin-right: 110px;
-    font-size: 1.2rem;
+    width: 10%;
+    font-size: 0.8rem;
     color: #f5f5f5;
     transition: 450ms cubic-bezier(0.17, 0.67, 0.55, 1.43);
     opacity: 0;
@@ -155,7 +159,8 @@
     -webkit-transform: rotate(-45deg);
 }
 
-.slider-single h1 a{
+.slider-single h2 a{
+    position: absolute;
     text-decoration: none;
     color: #f5f5f5;
     padding:  5px 10px;
@@ -163,9 +168,10 @@
     border-radius: 5px;
     display: block;
     transition: 0.3s ease-in-out;
+    font-family: 'DotGothic16', sans-serif;
 }
 
-.slider-single h1 a:hover{
+.slider-single h2 a:hover{
     color: #333333;
     background: #f5f5f5;
 }
